--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* above-the-fold styles are in the html */
 /*-------------------PART_SEC----------------*/
 .parts_sec{
     padding: 40px 0 85px;
