moved to preact

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,76 @@
-/* above-the-fold styles are in the html */
+/* TODO: we could want above-the-fold styles inlined into html */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Open Sans", sans-serif;
+}
+.container{
+    max-width: 1020px;
+    margin: 0 auto;
+}
+
+/*------HEADER---------*/
+header{
+    height: 60px;
+    background: #000000;
+    position: relative;
+}
+header .protect_elem{
+    bottom: -21px;
+    top: auto;
+}
+header .soc_net{
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+header .soc_net a{
+    margin-left: 10px;
+    height: 26px;
+    width: 26px;
+    color: #ffffff;
+}
+
+/*--------MAIN---------*/
+.main {
+    padding: 210px 0 168px;
+    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url("assets/main.jpg") no-repeat;
+    background-size: cover;
+    text-align: center;
+}
+.main h1{
+    font-size: 65px;
+    letter-spacing: 2px;
+    line-height: 68px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Bebas Neue";
+    margin-bottom: 25px;
+}
+.main h2{
+    font-size: 73px;
+    letter-spacing: 4px;
+    line-height: 98px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Bebas Neue";
+}
+.main a{
+    width: 408px;
+    padding: 20px 0;
+    border-radius: 7px;
+    background-color: #fef300;
+    display: block;
+    margin: 75px auto 0;
+    font-size: 47px;
+    color: #000000;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+}        
+
 /*-------------------PART_SEC----------------*/
 .parts_sec{
     padding: 40px 0 85px;
