--- a/src/style.css
+++ b/src/style.css
@@ -34,12 +34,13 @@ header .soc_net a{
 }
 
 /*--------MAIN---------*/
+/* moved to html because of the image
 .main {
     padding: 210px 0 168px;
     background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url("assets/main.jpg") no-repeat;
     background-size: cover;
     text-align: center;
-}
+} */
 .main h1{
     font-size: 65px;
     letter-spacing: 2px;
