--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ header .soc_net a {
     font-family: "Bebas Neue", Arial;
 }
 
-.main a {
+.act {
     width: 408px;
     padding: 20px 0;
     border-radius: 7px;
@@ -279,7 +279,7 @@ header .soc_net a {
 /*}*/
 .social_sec h3 {
     color: #000000;
-    animation: blur .75s ease-out infinite;
+    animation: blur 1.75s ease-out infinite;
     text-shadow: 0 0 5px #fff, 0 0 7px #fff;
 }
 
