--- a/src/index.css
+++ b/src/index.css
@@ -279,11 +279,18 @@ header .soc_net a {
 /*}*/
 .social_sec h3 {
     color: #000000;
-    animation: blur .75s ease-out infinite;
-    text-shadow: 0 0 5px #fff, 0 0 7px #fff;
+    animation: blur 1s ease-in-out infinite;
+    text-shadow: 0 0 5px #fff;
 }
 
 @keyframes blur {
+    from {
+        text-shadow: 0px 0px 10px red,
+        /* 0px 0px 10px #fff, */
+        0px 0px 20px #7B96B8;
+    }
+}
+/* @keyframes blur {
     from {
         text-shadow: 0px 0px 10px red,
         0px 0px 10px #fff,
@@ -297,7 +304,7 @@ header .soc_net a {
         0px 0px 50px #fff,
         0px 0px 50px #7B96B8;
     }
-}
+} */
 
 .social_buttons {
     margin: 30px 0 70px;
